# pixelengine

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PIXELENGINE_MANUAL.md  README.md  bugfix_demo.py  example_clean_art.py  llms-full.txt  llms.txt  math_demo.py  pixelengine.skill  pyproject.toml  secretary_problem_short.py  setup.py  update_gitbook.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-engine-shapes-renderer/: 01-PLAN.md  02-PLAN.md  03-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: agent-guide.md  animation-guide.md  api-reference.md  educational-features.md  effects-and-shaders.md  getting-started.md
examples/: animation_demo.py  collatz_conjecture_short.py  collatz_short.py  hello_pixel.py  non_euclidean_geom.py  showcase.py  snowflake_pixelengine_yt.py  snowflake_yts.py  sound_demo.py  sprite_demo.py  v2_demo.py  v3_demo.py  voiceover_demo.py  wind_turbine_short.py  youtube_uploader.py
pixelengine/: __init__.py  agent_pipeline.py  animation.py  annotations.py  background.py  camera.py  camera3d.py  camerafx.py  canvas.py  captions.py  cinematic.py  cli_lint.py  codeblock.py  collision.py  color.py  compose.py  config.py  construction.py  effects.py  group.py  keyframes.py  layout.py  lighting.py  log.py  math3d.py  mathobjects.py  mathtex.py  music.py  objects3d.py  organic.py  parallel.py  pathanim.py  physics.py  pixelart.py  pobject.py  presets.py  renderer.py  scene.py  scene_dsl.py  shaders.py  (+14 more)
tests/: test_bugs.py  test_v4_features.py  test_v5_integrations.py
